<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#FFFFFF"
tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:background="#6495ED"
            android:contentDescription="@string/ignore"
            android:padding="5dp"
            android:src="@drawable/afr" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#0000FF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/question1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/question1A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingStart="2dp"
                android:text="@string/question1OptionA" />

            <CheckBox
                android:id="@+id/question1B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingStart="2dp"
                android:text="@string/question1OptionB" />

            <CheckBox
                android:id="@+id/question1C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingStart="2dp"
                android:text="@string/question1OptionC" />

            <CheckBox
                android:id="@+id/question1D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingStart="2dp"
                android:text="@string/question1OptionD" />
        </LinearLayout>


        <TextView
            android:id="@+id/question1Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/question2"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#0000FF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/question2A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/question2OptionA" />

            <CheckBox
                android:id="@+id/question2B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/question2OptionB" />

            <CheckBox
                android:id="@+id/question2C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/question2OptionC" />

            <CheckBox
                android:id="@+id/question2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/question2OptionD" />
        </LinearLayout>


        <TextView
            android:id="@+id/question2Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/question3"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#0000FF" />

        <!--RadioGroup attributes-->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question3A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingStart="2dp"
                android:text="@string/question3OptionA" />

            <RadioButton
                android:id="@+id/question3B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingStart="2dp"
                android:text="@string/question3OptionB" />
        </RadioGroup>

        <TextView
            android:id="@+id/question3Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="4. Which Symbol of Local Currency is used in Kenya?"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#0000FF" />

        <EditText
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/questionHint"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColorHint="#008000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question4Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/submit_button_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitAnswer"
            android:padding="5dp"
            android:text="@string/submit_answers" />
    </LinearLayout>

</LinearLayout>
</ScrollView>